Day 3 - Fixing the navbar issue with shifting in the different nav links by changing 100% width to 100vw

--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between; /* */
-  width: 100%;
+  width: 100vw;
   position: fixed;
   z-index: 1000;
   top: 0;
@@ -153,7 +153,7 @@
   }
 
   .navbar .shoppingBtn {
-    margin-right: 6%;
+    margin-right: 7%;
    
   }
   .navbar .shoppingBtn .shoppingCard {
